Arc-Dark: fix collapsed message list item colors

--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -65,6 +65,20 @@
 		.message-item-white-wrap {
 			background-color: @colorBodyBgDarker;
 		}
+
+		.message-item-area {
+			.collapsed-from {
+				color: @colorTextFaded;
+			}
+
+			.collapsed-timestamp {
+				color: @colorTextFaded;
+			}
+
+			.collapsed-snippet {
+				color: @colorTextFaded;
+			}
+		}
 	}
 }
 
